--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               Grew.
             </h1>
             <h2 class="subtitle main-subtitle">
-            Kick-ass ideas and dev from EU
+            Kick-ass ideas and dev. Based in EU
             <span>
               <img style="height: 20px;" src="./img/800px-Flag_of_Europe.svg.png"> 
           </span>
@@ -76,7 +76,7 @@
         </div>
       </section> 
 
-      <section class="bd-easy section is-medium" style="background: #f88181">
+      <section class="bd-easy section is-medium" style="background: #00d1b2;">
         <!-- <section class="bd-easy section is-medium" style="background: #ff9f9f;"> -->
 
           <h2 class="title grew-title" style="color: #fff;">Our work</h2>
@@ -92,13 +92,13 @@
                     <h3 class="title is-3">
                         pointNG - Privacy Protected Location Personalization in JavaScript
                     </h3>
-                    <h4 class="subtitle is-4" style="margin-top: 20px">
+                    <p style="margin-top: 20px">
                       Use pointNG SDK to build GPS-location based web experiences without sending your users' latitude and longitude coordinate data to 3rd parties (not even us).
-                    </h4>
-                      <h4 class="subtitle is-4">
+                    </p>
+                      <p style="margin-top: 20px">
                       More privacy-conscious and user-centric service → More location permissions.
-                    </h4>
-                    <a class="button is-primary is-large" style="margin-bottom: 10px;" href="https://www.pointng.io" target="_blank">
+                      </p>
+                    <a class="button is-primary is-large" style="margin-bottom: 10px; margin-top: 20px;" href="https://www.pointng.io" target="_blank">
                       <span>
                         <strong>Get started</strong>
                       </span>
@@ -121,13 +121,13 @@
                 <h3 class="title is-3">
                     ConsoleChat.io - Underground developer meeting room.
                 </h3>
-                <h4 class="subtitle is-4" style="margin-top: 20px">
+                <p style="margin-top: 20px">
                   ConsoleChat turns browsers' console into a global real-time chat that connects developers from websites.
-                </h4>
-                  <h4 class="subtitle is-4">
+              </p>
+                  <p style="margin-top: 20px">
                     Support the developer community and let developers from all websites that are using ConsoleChat chat directly on console when using your website!
-                </h4>
-                <a class="button is-primary is-large" style="margin-bottom: 10px;" href="https://www.consolechat.io" target="_blank">
+                  </p>
+                <a class="button is-primary is-large" style="margin-bottom: 10px; margin-top: 20px;" href="https://www.consolechat.io" target="_blank">
                   <span>
                     <strong>Get started</strong>
                   </span>
