--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="field has-addons">
                       
                         <p class="control">
-                            <a href="https://twitter.com/pointNGio" target="_blank" class="button">
+                            <a href="https://twitter.com/Grewdev" target="_blank" class="button">
                                 <!-- <span class="icon"><i aria-hidden="true" class="fa fa-twitter"></i></span><span>Twitter</span> -->
                                 <i class="fab fa-twitter" style="margin-right: 5px;"></i>
                              Twitter
@@ -63,7 +63,7 @@
                             </a>
                         </p>
                         <p class="control">
-                          <a href="https://github.com/pointNG" target="_blank" class="button is-github">
+                          <a href="https://github.com/Grew-dev" target="_blank" class="button is-github">
                               <!-- <span class="icon"><i aria-hidden="true" class="fa fa-github"></i></span><span>Github</span> -->
                               <!-- <i class="fa fa-github-in" style="margin-right: 5px;"></i> -->
                               <i class="fab fa-github" style="margin-right: 5px;"></i>
@@ -158,7 +158,7 @@
                                     <div class="field-body">
                                         <div class="field has-addons">
                                             <p class="control">
-                                                <a href="https://twitter.com/pointNGio" target="_blank" class="button">
+                                                <a href="https://twitter.com/Grewdev" target="_blank" class="button">
                                                     <!-- <span class="icon"><i aria-hidden="true" class="fa fa-twitter"></i></span><span>Twitter</span> -->
                                                     <i class="fab fa-twitter" style="margin-right: 5px;"></i>
                                                  Twitter
@@ -172,7 +172,7 @@
                                                 </a>
                                             </p>
                                             <p class="control">
-                                              <a href="https://github.com/pointNG" target="_blank" class="button is-github">
+                                              <a href="https://github.com/Grew-dev" target="_blank" class="button is-github">
                                                   <!-- <span class="icon"><i aria-hidden="true" class="fa fa-github"></i></span><span>Github</span> -->
                                                   <!-- <i class="fa fa-github-in" style="margin-right: 5px;"></i> -->
                                                   <i class="fab fa-github" style="margin-right: 5px;"></i>
