--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         </div>
       </section> 
 
-      <section class="bd-easy section is-medium" style="background: #00d1b2;">
-        <!-- <section class="bd-easy section is-medium" style="background: #ff9f9f;"> -->
+      <!-- <section class="bd-easy section is-medium" style="background: #00d1b2;"> -->
+        <section class="bd-easy section is-medium" style="background: #00d0d1;">
 
           <h2 class="title grew-title" style="color: #fff;">Our work</h2>
           <div class="grew-container-wide">
