added secure local weather app

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
               Grew.
             </h1>
             <h2 class="subtitle main-subtitle">
-            Kick-ass ideas and dev. Based in EU
-            <span>
+              Digital Innovation Grewing and Brewing.
+            <!-- <span>
               <img style="height: 20px;" src="./img/800px-Flag_of_Europe.svg.png"> 
-          </span>
+          </span> -->
             </h2>
             <h2 class="subtitle main-subtitle">
               100% independent and self-funded by <a href="https://twitter.com/ihmissuti">@ihmissuti</a>, <a href="https://twitter.com/aleksimmonen">@aleksimmonen</a> and <a href="https://twitter.com/Jmeriluoto">@Jmeriluoto</a>.</p>
@@ -90,17 +90,14 @@
                 <div class="column">
                     <header class="bd-index-header bd-is-left">
                     <h3 class="title is-3">
-                        pointNG - Privacy Protected Location Personalization in JavaScript
+                        pointNG - Hyper Secure Location Solution for Web Developers
                     </h3>
                     <p style="margin-top: 20px">
-                      Use pointNG SDK to build GPS-location based web experiences without sending your users' latitude and longitude coordinate data to 3rd parties (not even us).
+                      Use pointNG SDK to build GPS-location-based web experiences without privacy risks.
                     </p>
-                      <p style="margin-top: 20px">
-                      More privacy-conscious and user-centric service → More location permissions.
-                      </p>
                     <a class="button is-primary is-large" style="margin-bottom: 10px; margin-top: 20px;" href="https://www.pointng.io" target="_blank">
                       <span>
-                        <strong>Get started</strong>
+                        <strong>Read more</strong>
                       </span>
                     </a>
                     </header>
@@ -129,14 +126,40 @@
                   </p>
                 <a class="button is-primary is-large" style="margin-bottom: 10px; margin-top: 20px;" href="https://www.consolechat.io" target="_blank">
                   <span>
-                    <strong>Get started</strong>
+                    <strong>Read more</strong>
                   </span>
                 </a>
                 </header>
             </div>
            
         </div>
-    </div>
+      </div>
+
+      <div class="grew-container-wide">
+        <div class="columns is-vcentered">
+          <div class="column">
+            <figure class="image is-120x71" style="padding:20px;">
+                <img src="./img/secure_local_weather.png" style="border-radius: 5px;box-shadow: 0 2px 6px 0 rgba(0,0,0,.4);">
+            </figure>
+        </div>
+            <div class="column">
+                <header class="bd-index-header bd-is-left">
+                <h3 class="title is-3">
+                    Secure Local Weather App
+                </h3>
+                <p style="margin-top: 20px">
+                  Privacy-friendly local weather forecasts. No tracking or transferring of coordinate-data.
+              </p>
+                <a class="button is-primary is-large" style="margin-bottom: 10px; margin-top: 20px;" href="https://gifted-davinci-a1defb.netlify.app" target="_blank">
+                  <span>
+                    <strong>Try the online web prototype</strong>
+                  </span>
+                </a>
+                </header>
+            </div>
+           
+        </div>
+      </div>
 </section>
 
     <footer class="footer footer-color" id="footer">
