--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
             <div class="column">
                 <header class="bd-index-header bd-is-left">
                 <h3 class="title is-3">
-                    Secure Local Weather App
+                    Secure Local Weather Forecasts
                 </h3>
                 <p style="margin-top: 20px">
                   Privacy-friendly local weather forecasts. No tracking or transferring of coordinate-data.
               </p>
-                <a class="button is-primary is-large" style="margin-bottom: 10px; margin-top: 20px;" href="https://gifted-davinci-a1defb.netlify.app" target="_blank">
+                <a class="button is-primary is-large" style="margin-bottom: 10px; margin-top: 20px;" href="https://proto.secureweather.io" target="_blank">
                   <span>
-                    <strong>Try the online web prototype</strong>
+                    <strong>Try it out</strong>
                   </span>
                 </a>
                 </header>
@@ -191,6 +191,33 @@
            
         </div>
       </div>
+
+      <div class="grew-container-wide">
+        <div class="columns is-vcentered">
+          <div class="column">
+            <figure class="image is-120x71" style="padding:20px;">
+                <img src="./img/pixtu.png" style="border-radius: 5px;box-shadow: 0 2px 6px 0 rgba(0,0,0,.4);">
+            </figure>
+        </div>
+            <div class="column">
+                <header class="bd-index-header bd-is-left">
+                <h3 class="title is-3">
+                  Pixtu.io - Cookieless Real-Time Lead Conversion Prediction
+                </h3>
+                <p style="margin-top: 20px">
+                  Predict whether your website visitors will buy or bounce. Optimize your website in real-time.
+              </p>
+                <a class="button is-primary is-large" style="margin-bottom: 10px; margin-top: 20px;" href="https://pixtu.io" target="_blank">
+                  <span>
+                    <strong>Go to pixtu.io</strong>
+                  </span>
+                </a>
+                </header>
+            </div>
+           
+        </div>
+      </div>
+
 </section>
 
     <footer class="footer footer-color" id="footer">
